# GRIME-AI

./: .Rhistory  .gitattributes  .gitignore  build.bat  environment.yml  pyproject.toml  requirements.txt
Installer/: GRIMe-AI.iss
Installer/ui/: QDialog_ColorSegmentation.ui  QDialog_EdgeDetection.ui  QDialog_ImageNavigation.ui  QDialog_ImageOrganizer.ui  QDialog_Training.ui
src/GRIME_AI/: GRIME_AI_AnnotatorLabel.py  GRIME_AI_COCO_Utils.py  GRIME_AI_CSS_Styles.py  GRIME_AI_Color.py  GRIME_AI_ColorSegmentationDlg.py  GRIME_AI_CompositeSliceDlg.py  GRIME_AI_CompositeSlices.py  GRIME_AI_Diagnostics.py  GRIME_AI_EdgeDetectionDlg.py  GRIME_AI_ExportCOCOMasksDlg.py  GRIME_AI_Feature_Export.py  GRIME_AI_FileUtilitiesDlg.py  GRIME_AI_GoogleMap.py  GRIME_AI_GreenImageGenerator.py  GRIME_AI_ImageAnnotatorDlg.py  GRIME_AI_ImageData.py  GRIME_AI_ImageNavigationDlg.py  GRIME_AI_ImageOrganizerDlg.py  GRIME_AI_ImageQualityCheck.py  GRIME_AI_ImageStats.py  GRIME_AI_ImageTriage.py  GRIME_AI_Image_Conversion.py  GRIME_AI_Image_Processing.py  GRIME_AI_JSON_Editor.py  GRIME_AI_KMeans.py  GRIME_AI_ML_ImageProcessingDlg.py  GRIME_AI_MaskEditorDlg.py  GRIME_AI_Model_Training_Visualization.py  GRIME_AI_PhenoCam.py  GRIME_AI_ProcessImage.py  GRIME_AI_ProductTable.py  GRIME_AI_QLabel.py  GRIME_AI_QMessageBox.py  GRIME_AI_QProgressWheel.py  GRIME_AI_QTableWidget.py  GRIME_AI_ROI_Analyzer.py  GRIME_AI_ReleaseNotesDlg.py  GRIME_AI_Resize_Controls.py  GRIME_AI_Save_Utils.py  GRIME_AI_SplashScreen.py  (+34 more)
src/GRIME_AI/geomaps/: google_maps_viewer.py  openstreetmap_viewer.py
(+71 files in other folders)
